Bug 96745 - Crash when close the Background- or Font-Color-Dialog
Summary: Crash when close the Background- or Font-Color-Dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.3.0
Keywords: haveBacktrace
: 96511 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-28 01:23 UTC by Juergen Funk
Modified: 2016-10-25 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (7.32 KB, text/plain)
2015-12-28 07:23 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2015-12-28 01:23:42 UTC
In writer, calc, draw, open the font-, background-color-dialog (this open with the drop-down button) then click on the Header of the dialog, the dialog get a other header with a close-button. When close the dialog with this close-button and the application crash.
Comment 1 Juergen Funk 2015-12-28 01:28:14 UTC
Not sure but this bug 94674 sounds alike simular
Comment 2 Juergen Funk 2015-12-28 02:44:13 UTC
Patch here : https://gerrit.libreoffice.org/#/c/20971/

But not sure is this patch the right way, but solved the crash
Comment 3 Julien Nabet 2015-12-28 07:23:23 UTC
Created attachment 121575 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 4 A (Andy) 2015-12-28 09:00:27 UTC
For me not reproducible with LO 5.1.0.1, Win 8.1
Comment 5 Juergen Funk 2015-12-28 10:14:06 UTC
Hi Julien, A(Andy)

thank you for test, i think a patch between 5.1.0.1 and master has make the problem.
I set my patch to "Abandon" and i want look for the right problem
Comment 6 Juergen Funk 2015-12-30 18:47:45 UTC
I have found the Patch and reverted here
 https://gerrit.libreoffice.org/#/c/21013/

For the message: 
"warn:legacy.tools:4820:2816:E:\dev\src\lo-core\vcl\inc\svdata.hxx:385: object deleted while in use !"

I think (but not sure) that is a wrong message, it was delete here 
http://opengrok.libreoffice.org/xref/core/vcl/source/window/window.cxx#517, i mean the condition must be in dependencies of the mpWindow (is in the destructor too).
Comment 7 Commit Notification 2016-01-28 15:30:27 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=590ef5d5dc5f5aefd9d590aa65686d0d9554506d

tdf#96745: Hold VclPtr on a border window's client window

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Juergen Funk 2016-01-29 07:50:52 UTC
Hi bubli,

super you have found, sorry but my computer is crash and can not work again.

Under windows exit a second (little) problem for this dialogs, after a patch this dialogs open not on the push-button, but under linux it is okay.
Comment 9 Maxim Monastirsky 2016-03-10 14:42:24 UTC
*** Bug 96511 has been marked as a duplicate of this bug. ***
Comment 10 Caolán McNamara 2016-06-02 11:25:28 UTC
I think this was the popups from the sidebar. Seeing as the crash is gone I'll close this.

caolanm->juergen: if you can double check to see if the windows problem with not reopening persists and open a new bug referencing this if it does. You can check if reverting this fix makes a difference to that problem or if the crash comes back making that impossible to check.
Comment 11 Juergen Funk 2016-06-03 12:32:11 UTC
Hi Caolán McNamara,

i have not fix this bug it was bubli, and i have tested bubli patch and it works for me.
The other little problem is solved here tdf#87944
Hope i have you understand right
Comment 12 Commit Notification 2016-06-03 20:10:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a779d979b9dd87589f00cfcb245f70c6b26d8c2c

accidentially reverted fix for tdf#96745

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.