tdf#96745 Crash when close the Backround- or Font-Color-Dialog

The crash is here
   http://opengrok.libreoffice.org/xref/core/vcl/source/window/window.cxx#558

"SvxColorWindow_Impl" is to dispose, in the line window.cxx#557 call
the "disposeAndClear" but the "OutputDevice" and the mnRefCnt=0x00000001,
in this case the object deleted.

My patch solved the crash, but i'am not sure it is the right way

Change-Id: Iab3ca94994e4e487c304da2d552b788388bea8da